Increased padding for navbar overlapping issue

--- a/hw3/src/Styles.css
+++ b/hw3/src/Styles.css
@@ -30,6 +30,7 @@
 
 .navbar ul li {
   display: inline-block;
+  padding: 0 10px;
 }
 
 .navbar ul li a {
